<resources>

    <string name="app_name">Geokontakte</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_startmenu">Startmenu</string>
    <string name="kontakte_anzeigen">Kontakte zeigen</string>
    <string name="kontakte_verwalten">Kontakte verwalten</string>
    <string name="kontakte_anlegen">Kontakte anlegen</string>
    <string name="pos_auf_karte">Position anzeigen</string>
    <string name="pos_uebermitteln">Position übermitteln</string>
    <string name="title_activity_kontakte_anzeigen">Kontakte_anzeigen</string>

    <dimen name="zehn_pt">10pt</dimen>

    <string name="title_activity_kontakte_anlegen">Kontakte_anlegen</string>
    <string name="name">Name:</string>
    <string name="vorname">Vorname:</string>
    <string name="handynummer">Handynummer:</string>
    <string name="speichern">Speichern</string>
    <string name="leeren">Leeren</string>
    <string name="title_activity_kontakt">Kontakt</string>

</resources>